--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="image_composable_content">Creates a composable that lays out and draws a given Painter class object.</string>
     <string name="row_composable_content">A layout composable that places its children in a horizontal sequence.</string>
     <string name="column_composable_content">A layout composable that places its children in a vertical sequence.</string>
+    <string name="user_name">Shunya Katada</string>
+    <string name="user_description">Android Developer Extraordinaire</string>
+    <string name="shopping_cart_content_desc">Shopping cart</string>
 </resources>
