--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="user_name">Shunya Katada</string>
     <string name="user_description">Android Developer Extraordinaire</string>
     <string name="shopping_cart_content_desc">Shopping cart</string>
+    <string name="roll">Roll</string>
 </resources>
